install(FILES eecloud_passwd.1 eecloud_pub.1 eecloud_sub.1 DESTINATION ${MANDIR}/man1)
install(FILES libeecloud.3 DESTINATION ${MANDIR}/man3)
install(FILES eecloud.conf.5 DESTINATION ${MANDIR}/man5)
install(FILES eecloud-tls.7 mqtt.7 DESTINATION ${MANDIR}/man7)
install(FILES eecloud.8 DESTINATION ${MANDIR}/man8)
